stylesheets/_component.forms.scss
/* ... */
.form__group--compact .input-group-addon {
    line-height: 30px;
}

.modal .form__group {
    padding: 0;
}

.form__control {
    border-radius: $input-border-radius;
    height: $input-height-base;
    line-height: $input-height-base;
    padding: 0 0 0 $padding-base-horizontal;

    @include respond-min($screen-tablet) {
        .has-changed &.file,
        .has-success &.file,
        .has-warning &.file,
        .has-error &.file {
            padding: 14px 10px 13px;
        }
    }

    &[type="color"],
    &[type="date"],
    &[type="email"],
    &[type="month"],
    &[type="number"],
    &[type="password"],
    &[type="search"],
    &[type="tel"],
    &[type="text"],
    &[type="time"],
    &[type="url"],
    &[type="week"] {
        border: 1px solid $input-border;
    }

    &[type="search"] {
        box-sizing: border-box;
    }

    &.checkbox,
    &.radio {
        border-radius: 0;
        height: auto;
        padding: 0;
        vertical-align: baseline;
        width: auto;

        @include ie-lte(9) {
            border: 0;
        }
    }

    &.textarea {
        border: 1px solid $input-border;
        height: auto;
        line-height: $line-height-base;
        min-height: 68px;
        padding-top: 11px;
        padding-bottom: 11px;
        resize: vertical;
    }

    &.select {
        appearance: none;
        background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAFZJREFUOBFjYBgFVA+Bp0AT/xPAT/DZ6gWU/IPHgN9AOQ98BoDkMoAYlytSCWmGyXdhMaQNJkkMzQhUtBLJkGVANkiMJMABVL0PiHcBMTtJOkcVkxYCADK5Iu6w+agDAAAAAElFTkSuQmCC');
        background-position: 97%;
        background-repeat: no-repeat;
        border: 1px solid $input-border;
        padding: 0 20px 0 $padding-base-horizontal;

        @include ie-lte(8) {
            height: 24px;
        }

        // select arrows can't be hidden in IE8 & 9, so reset to default styles
        @include ie-lte(9) {
            background-image: none;
            padding-right: 0;
        }

        // remove the arrow in IE10 & 11, modern browsers are taken care of
        // by the `appearance` property
        &::-ms-expand {
            display: none;
        }
    }

    &.file {
        background: none;
        border: 0;
        height: auto;
        line-height: normal;
        padding: 0;

        @include respond-min($screen-tablet) {
            padding: 8px 0;
        }

        @include ie-lte(9) {
            border: 1px solid $input-border;
            border-radius: 0;
        }

        &:focus {
            border: 0;
            box-shadow: 0 0 0 2px color(primary);
        }

        &.is-disabled {
            background-color: color(white);
            color: color(text, disabled);
        }
    }

    // IE8 - position text in the middle of inputs
    @at-root {
        input[type="color"]#{&},
        input[type="date"]#{&},
        input[type="email"]#{&},
        input[type="month"]#{&},
        input[type="number"]#{&},
        input[type="password"]#{&},
        input[type="search"]#{&},
        input[type="tel"]#{&},
        input[type="text"]#{&},
        input[type="time"]#{&},
        input[type="url"]#{&},
        input[type="week"]#{&} {
            @include ie-lte(8) {
                line-height: 48px;
            }
        }
    }

    // IE8 - fix widths of inputs and add border/padding
    @at-root {
        .form__group input[type="color"]#{&},
        .form__group input[type="date"]#{&},
        .form__group input[type="email"]#{&},
        .form__group input[type="month"]#{&},
        .form__group input[type="number"]#{&},
        .form__group input[type="password"]#{&},
        .form__group input[type="search"]#{&},
        .form__group input[type="tel"]#{&},
        .form__group input[type="text"]#{&} ,
        .form__group input[type="time"]#{&},
        .form__group input[type="url"]#{&},
        .form__group input[type="week"]#{&},
        .form__group select#{&},
        .form__group textarea#{&} {
            @include ie-lte(8) {
                border: 1px solid $input-border;
                max-width: 100%;
                padding: 0 0 0 $padding-base-horizontal;
                width: 300px;
            }
        }
    }

    // IE8 - fix widths of inputs on form__group--full
    @at-root {
        .form__group--full input[type="color"]#{&},
        .form__group--full input[type="date"]#{&},
        .form__group--full input[type="email"]#{&},
        .form__group--full input[type="month"]#{&},
        .form__group--full input[type="number"]#{&},
        .form__group--full input[type="password"]#{&},
        .form__group--full input[type="search"]#{&},
        .form__group--full input[type="tel"]#{&},
        .form__group--full input[type="text"]#{&} ,
        .form__group--full input[type="time"]#{&},
        .form__group--full input[type="url"]#{&},
        .form__group--full input[type="week"]#{&},
        .form__group--full select#{&},
        .form__group--full textarea#{&} {
            @include ie-lte(8) {
                 width: 100%;
            }
        }
    }

    // Disabled and read-only inputs
    // Note: HTML5 says that inputs under a fieldset > legend:first-child won't be
    // disabled if the fieldset is disabled. Due to implementation difficulty,
    // we don't honor that edge case; we style them as disabled anyway.
    &[disabled],
    &[readonly],
    fieldset[disabled] & {
        cursor: not-allowed;
        background-color: $input-bg-disabled;
    }

    &:focus {
        border: 1px solid color(black);
        box-shadow: 0 0 0 1px color(black);
        outline: 3px solid color(border, focus);
        outline-offset: 2px;
    }
}

.form__link {
    height: $input-height-base;
    line-height: $input-height-base;
}
/* ... */

